[metadata]
name = Berth
summary = A deliberately minimalist VM runner for Kubernetes.
description-file = README.rst

author = Berth Authors
home-page = http://berth.readthedocs.io/en/latest/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    berth

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html
